fixed some strange overflow behavior on nav

--- a/css/style.css
+++ b/css/style.css
@@ -38,13 +38,13 @@ a:active, a:visited, a:hover {
 
 /* content divs */
 nav {
-	width: 100%;
+	/* width: 100%; */
 	height: auto;
 	z-index: 4;
 	height: 100%;
 	margin: 0 auto;
 	padding: 20px;
-	overflow: scroll;
+	/* overflow: scroll; */
 	max-width: 750px;
 }
 main {
